Modifies package.json file to build all html files. Fixes the bug where the menu is not visible when the user has scrolled down.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -509,7 +509,7 @@ main {
 }
 
 .main-sidebar {
-  position: absolute;
+  position: fixed;
   top: 61px;
   left: 0;
   width: 100%;
