--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -99,7 +99,7 @@ main {
 }
 
 .main-sidebar {
-  position: absolute;
+  position: fixed;
   top: 61px;
   left: 0;
   width: 100%;
